# internal/domain/types/user.go
@@ -1,0 +1,14 @@
+// internal/domain/types/user.go
+package types
+
+import (
+	"time"
+)
+
+type User struct {
+	ID        string    `gorm:"primaryKey" json:"id"`
+	Username  string    `gorm:"uniqueIndex;size:100;not null" json:"username"`
+	Password  string    `gorm:"size:255;not null" json:"-"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
