# meowmorize-frontend/src/services/api.js
@@ -4,6 +4,7 @@ import axios from 'axios';
 //const API_BASE_URL = 'http://192.168.86.176:8789/api'; // Adjust if different
 // Use the environment variable for the API base URL
 const API_BASE_URL = process.env.REACT_APP_API_BASE_URL || 'http://192.168.86.176:8789/api';
+//const API_BASE_URL =   'http://192.168.86.176:8789/api';
 
 
 const api = axios.create({
@@ -12,6 +13,21 @@ const api = axios.create({
     'Content-Type': 'application/json',
   },
 });
+
+
+// Add a request interceptor to include the token
+api.interceptors.request.use(
+  (config) => {
+    const token = localStorage.getItem('token'); // Retrieve token from localStorage
+    if (token) {
+      config.headers.Authorization = `Bearer ${token}`;
+    }
+    return config;
+  },
+  (error) => Promise.reject(error)
+);
+
+
 
 // Fetch all decks
 export const fetchDecks = async () => {
@@ -184,6 +200,14 @@ export const createEmptyDeck = async () => {
 };
 
 
-
+// Example API function for login
+export const loginUser = async (credentials) => {
+  try {
+    const response = await api.post('/login', credentials);
+    return response.data;
+  } catch (error) {
+    throw error;
+  }
+};
 
 export default api;
